--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact - Silicon Design</title>
+    <link rel="stylesheet" href="contact-styles.css" />
     <link rel="stylesheet" href="styles.css" />
     <script src="script.js" defer></script>
   </head>
   <body>
-    <div id="navbar"></div>
+    <section id="contact-us">
+      <div class="contact-us-container">
+        <div id="navbar"></div>
+        <div class="breadcrumb">
+          <a href="index.html" class="breadcrumb-link">
+            <span class="material-icons-outlined">home</span> Homepage
+          </a>
+          <span class="breadcrumb-divider">&raquo;</span>
+          <span class="breadcrumb-current">Contact</span>
+        </div>
+      </div>
+    </section>
     <div id="footer"></div>
   </body>
 </html>
