added 'contact us' elements

--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,39 @@
           <span class="breadcrumb-divider">&raquo;</span>
           <span class="breadcrumb-current">Contact</span>
         </div>
+        <div class="contact-elements">
+          <div class="contact-info">
+            <h1>Contact Us</h1>
+            <div class="email-us">
+              <img src="/icons/email-us.svg" class="email-us-image" />
+              <div class="email-us-text">
+                <h3>Email us</h3>
+                <p>
+                  Please feel free to drop us a line. We will respond as soon as
+                  possible.
+                </p>
+                <p class="leave-message">
+                  Leave a message
+                  <span class="material-icons">arrow_forward</span>
+                </p>
+              </div>
+            </div>
+            <div class="careers">
+              <img src="/icons/careers.svg" class="careers-image" />
+              <div class="careers-text">
+                <h3>Careers</h3>
+                <p>
+                  Sit ac ipsum leo lorem magna nunc mattis maecenas non
+                  vestibulum.
+                </p>
+                <p class="send-application">
+                  Send a send-application
+                  <span class="material-icons">arrow_forward</span>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <div id="footer"></div>
