--- a/contact.html
+++ b/contact.html
@@ -51,6 +51,15 @@
               </div>
             </div>
           </div>
+          <div class="consultation">
+            <div class="consultation-wrapper">
+              <h3>Get Online Consultation</h3>
+              <form id="full-name-form">
+                <label for="full-name">Full Name</label>
+                <input type="text" id="full-name" name="full-name" />
+              </form>
+            </div>
+          </div>
         </div>
       </div>
     </section>
