--- a/contact.html
+++ b/contact.html
@@ -99,6 +99,49 @@
         </div>
       </div>
     </section>
+    <section id="map-section">
+      <div class="map-container">
+        <img src="/images/map.svg" />
+        <div class="adresses">
+          <div class="medical-center-1">
+            <h4>Medical Center 1</h4>
+            <p>
+              <span class="material-icons-outlined">location_on</span> 4517
+              Washington Ave. Manchester, Kentucky 39495
+            </p>
+            <p>
+              <span class="material-icons-outlined">phone_in_talk</span> (406)
+              555-0120
+            </p>
+            <div class="times-wrapper">
+              <p>
+                <span class="material-icons-outlined">schedule</span>
+                <b>Mon - Fri: </b> 9:00 am - 22:00 am
+              </p>
+              <p><b>Sat - Sun: </b> 9:00 am - 22:00 am</p>
+            </div>
+          </div>
+          <div class="medical-center-2">
+            <h4>Medical Center 2</h4>
+            <p>
+              <span class="material-icons-outlined">location_on</span> 2464
+              Royal Ln. Mesa,New Jersey 45463
+            </p>
+            <p>
+              <span class="material-icons-outlined">phone_in_talk</span> (406)
+              544-0123
+            </p>
+            <div class="times-wrapper">
+              <p>
+                <span class="material-icons">schedule</span>
+                <b>Mon - Fri: </b> 9:00 am - 22:00 am
+              </p>
+              <p><b>Sat - Sun: </b> 9:00 am - 22:00 am</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <div id="footer"></div>
   </body>
 </html>
