added socials icons

--- a/contact.html
+++ b/contact.html
@@ -114,11 +114,17 @@
               555-0120
             </p>
             <div class="times-wrapper">
-              <p>
+              <div class="time-entry">
                 <span class="material-icons-outlined">schedule</span>
-                <b>Mon - Fri: </b> 9:00 am - 22:00 am
-              </p>
-              <p><b>Sat - Sun: </b> 9:00 am - 22:00 am</p>
+                <div class="time-text">
+                  <b>Mon - Fri: </b> 9:00 am - 22:00 am
+                </div>
+              </div>
+              <div class="time-entry no-icon">
+                <div class="time-text">
+                  <b>Sat - Sun: </b> 9:00 am - 22:00 am
+                </div>
+              </div>
             </div>
           </div>
           <div class="medical-center-2">
@@ -132,12 +138,32 @@
               544-0123
             </p>
             <div class="times-wrapper">
-              <p>
+              <div class="time-entry">
                 <span class="material-icons">schedule</span>
-                <b>Mon - Fri: </b> 9:00 am - 22:00 am
-              </p>
-              <p><b>Sat - Sun: </b> 9:00 am - 22:00 am</p>
+                <div class="time-text">
+                  <b>Mon - Fri:</b> 9:00 am - 22:00 am
+                </div>
+              </div>
+              <div class="time-entry no-icon">
+                <div class="time-text">
+                  <b>Sat - Sun:</b> 9:00 am - 22:00 am
+                </div>
+              </div>
             </div>
+          </div>
+          <div class="socials-icons">
+            <a href="#" aria-label="Facebook">
+              <button class="facebook"></button>
+            </a>
+            <a href="#" aria-label="Twitter">
+              <button class="twitter"></button>
+            </a>
+            <a href="#" aria-label="Instagram">
+              <button class="instagram"></button>
+            </a>
+            <a href="#" aria-label="Youtube">
+              <button class="youtube"></button>
+            </a>
           </div>
         </div>
       </div>
