added a contact link and made the navbar more interactive

--- a/navbar.html
+++ b/navbar.html
@@ -9,10 +9,13 @@
     <!-- navbar.html -->
     <nav>
       <div class="content-wrapper-nav">
-        <img src="logos/navbar-logo.svg" alt="Logo" class="logo" />
+        <a href="/index.html">
+          <img src="logos/navbar-logo.svg" alt="Logo" class="logo" />
+        </a>
         <div class="features-container">
           <ul>
-            <li class="features">Features</li>
+            <li class="features"><a href="#">Features</a></li>
+            <li class="contact"><a href="/contact.html">Contact</a></li>
           </ul>
         </div>
         <ul>
@@ -25,8 +28,10 @@
           </li>
           <li class="sign-in-button">
             <button class="sign-in">
-              <span class="icon material-icons">person_outlined</span>
-              Sign in/up
+              <a href="#" class="sign-in-link">
+                <span class="icon material-icons">person_outlined</span>
+                Sign in/up
+              </a>
             </button>
           </li>
           <div class="hamburger"></div>
