started migrating the contact page

--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
     <section id="map-section">
       <div class="map-container">
         <img src="/images/map.svg" />
-        <div class="adresses">
+        <div class="addresses">
           <div class="medical-center-1">
             <h4>Medical Center 1</h4>
             <p>
