finished dark mode for contact page

--- a/contact.html
+++ b/contact.html
@@ -87,8 +87,9 @@
                 <div class="form-group">
                   <label for="specialist">Specialist</label>
                   <select id="specialist" name="specialist" required>
-                    <option value="option-1"></option>
-                    <option value="option-2"></option>
+                    <option value="option-1">General Practitioner</option>
+                    <option value="option-2">Dermatologist</option>
+                    <option value="option-3">Dietitian</option>
                   </select>
                 </div>
 
